[STYLE] fixed issue where long project name is overflowing in container

--- a/client/src/style/Project/projectOverview.scss
+++ b/client/src/style/Project/projectOverview.scss
@@ -77,6 +77,8 @@
                     color 0.3s ease,
                     background-color 0.3s ease;
                 cursor: pointer;
+                text-overflow: ellipsis;
+                overflow: hidden;
             }
 
             .profile-overview-projects-list-item:hover {
